@@ -3,16 +3,16 @@
 // Craig Franklin
 
 [Language_Suite]
-LanguageSuite=gputils Compiler, Assembler, and Linker
+LanguageSuite=gputils Assembler and Linker
 DefaultFilename=default.mc
 Object=O
 Target=HEX
 Library=A
-Source=PAL;ASM
-Header=PUB;INC
+Source=ASM
+Header=INC
 LkrScripts=LKR
 Output=LST;MAP;HEX;O
 Debug=COF;COD
-MTC_Files=gpal;gpasm;gplink
+MTC_Files=gpasm;gplink
 
 
